# security-tests-m8

./: .codacy.yml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: CI.yaml  PiPy.yml  ci.yml
examples/hardened_m8_full_security/: .env.example  README.md  pytest.ini
examples/hardened_m8_full_security/tests/live/: conftest.py  test_full_security.py
security_tests_m8/: __init__.py  _client.py  _config.py  _detection.py  _preflight.py  _requests.py  cli.py  deployment.py  forge.py  full_security.py  plugin.py  release_hygiene.py
security_tests_m8/suites/: __init__.py  algorithms.py  deployment.py  service.py  token_modes.py  universal.py
tests/: test_cli.py  test_config.py  test_deployment.py  test_forge.py  test_release_hygiene.py
