[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-tests-m8"
version = "0.1.0"
description = "Reusable live security test suites for FastAPI M8 services."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eli Serra", email = "e.serra173@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "security", "pytest", "jwt", "live-tests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pytest",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "cryptography>=42.0",
    "pyjwt>=2.8",
    "pytest>=8.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0",
    "coverage>=7.0",
    "mypy>=1.14.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[project.entry-points."pytest11"]
security_tests_m8 = "security_tests_m8.plugin"

[tool.hatch.build.targets.wheel]
packages = ["security_tests_m8"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C90", "D", "S"]
ignore = [
    "D100", "D104", "D105", "D107",
    "D203", "D211", "D212", "D215",
    "D401", "D403", "D404", "D415", "D416", "D417",
    "S101",
    "S113",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"security_tests_m8/suites/**" = ["D", "S501", "S105", "S106", "S608"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["security_tests_m8"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=security_tests_m8 --cov-report=term-missing"
