[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-tests-m8"
version = "0.2.0"
description = "Reusable live security test suites for FastAPI M8 services."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eli Serra", email = "e.serra173@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "security", "pytest", "jwt", "live-tests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pytest",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "cryptography>=42.0",
    "PyJWT>=2.13.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "coverage>=7.14.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "pip-audit>=2.7.3",
]

[project.scripts]
security-tests-m8 = "security_tests_m8.cli:main"

[project.entry-points."pytest11"]
security_tests_m8 = "security_tests_m8.plugin"

[project.urls]
Homepage = "https://github.com/mano8/security_tests_m8"
Repository = "https://github.com/mano8/security_tests_m8"
"Issue Tracker" = "https://github.com/mano8/security_tests_m8/issues"


[tool.hatch.build.targets.wheel]
packages = ["security_tests_m8"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "D"]
ignore = [
    "E501",
    # missing docstrings — too strict for library internals and magic methods
    "D100", "D104", "D105", "D107",
    # google-style conflicts — explicit so Codacy honours them even without convention support
    "D203", "D213", "D215", "D301",
    "D401", "D404", "D406", "D407", "D408", "D409",
    "D413", "D415", "D416", "D417",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"security_tests_m8/suites/**" = ["D", "S501", "S105", "S106", "S608"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["security_tests_m8"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

# ─── Bandit ──────────────────────────────────────────────────────────────────
# This package IS live-test tooling. In the reusable suites, `assert` is the
# test mechanism (B101), and the JWTs/keys/secrets they build are deliberate
# "wrong" forgery fixtures used to prove the stack rejects them (B105/B106/B107).
# These are not real credentials, so the checks are suppressed for scans that
# read this config (run `bandit -c pyproject.toml -r security_tests_m8`).
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B106", "B107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:security_tests_m8 --cov=security_tests_m8 --cov-report=term-missing --cov-fail-under=100"
markers = [
    "live: live integration test",
    "live_security: algorithm-independent live security test",
    "live_asymmetric: RS256/ES256 live security test",
    "live_hs256: HS256 live security test",
    "live_stateful: stateful token-mode live security test",
    "live_stateless: stateless token-mode live security test",
    "live_hybrid: hybrid token-mode live security test",
    "live_deployment: deployment preflight/static live security test",
    "require_algorithm(*names): skip unless detected JWT alg matches",
    "require_token_mode(*names): skip unless detected token mode matches",
    "require_redis: skip unless health reports Redis available",
    "destructive: test mutates live auth/session/rate-limit state",
]

[tool.coverage.run]
omit = [
    "security_tests_m8/_client.py",
    "security_tests_m8/_detection.py",
    "security_tests_m8/_preflight.py",
    "security_tests_m8/_requests.py",
    "security_tests_m8/full_security.py",
    "security_tests_m8/plugin.py",
    "security_tests_m8/suites/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "if __name__ == .__main__.",
]
